2016-03-16  Richard Henderson  <rth@redhat.com>

	PR target/70048
	* config/aarch64/aarch64.c (virt_or_elim_regno_p): New.
	(aarch64_classify_address): Use it.
	(aarch64_legitimize_address): Force all subexpressions of PLUS
	into registers.  Simplify as (sfp+const)+reg or (reg+reg)+const.

2016-03-16  Jakub Jelinek  <jakub@redhat.com>
	    Richard Biener  <rguenth@suse.de>

	PR target/70245
	* rtlanal.c (replace_rtx): For REG, if from is a REG,
	return to even if only REGNO is equal, and assert
	mode is the same.

2016-03-11  Jeff Law  <law@redhat.com>

	PR rtl-optimization/70224
	* reorg.c (relax_delay_slots): Pass right argument to CROSSING_JUMP_P.

2016-03-16  Richard Henderson  <rth@redhat.com>

	PR middle-end/70199
	* function.h (struct function): Add has_forced_label_in_static.
	* gimplify.c (force_labels_r): Set it.
	* lto-streamer-in.c (input_struct_function_base): Read it.
	* lto-streamer-out.c (output_struct_function_base): Write it.
	* tree-inline.c (has_label_address_in_static_1): Remove.
	(copy_forbidden): Remove fndecl parameter; test
	has_forced_label_in_static.
	(inline_forbidden_p): Update call to copy_forbidden.
	(tree_versionable_function_p): Likewise.
	* ipa-chkp.c (chkp_instrumentable_p): Likewise.
	(chkp_versioning): Likewise.
	* tree-inline.h (copy_forbidden): Update decl.

2016-03-16  Marek Polacek  <polacek@redhat.com>

	PR c/70093
	* cgraphunit.c (cgraph_node::expand_thunk): Also build call to the
	function being thunked if the result type doesn't have fixed size.
	* gimplify.c (gimplify_modify_expr): Also set LHS if the result type
	doesn't have fixed size.

2016-03-16  Bin Cheng  <bin.cheng@arm.com>

	* tree-vect-loop.c (vect_analyze_loop_2): Fix wrong dump info by
	reporting malformed loop nest.

2016-03-16  Tom de Vries  <tom@codesourcery.com>

	PR lto/70187
	* ipa-devirt.c (possible_polymorphic_call_targets): Move
	nodes.length () == 1 test to before first nodes[0] access.

2016-03-16  Tom de Vries  <tom@codesourcery.com>
